--- a/static/css/style.css
+++ b/static/css/style.css
@@ -261,6 +261,7 @@ h1, h2, h3, h4 {
 .date-group h3 {
     border-bottom: 1px solid #eee;
     padding-bottom: 5px;
+    cursor: pointer;
     margin-top: 20px;
 }
 .date-group h3 span {
@@ -271,6 +272,16 @@ h1, h2, h3, h4 {
 .recording-items {
     list-style: none;
     padding: 0;
+}
+.date-group.collapsed .recording-items {
+    display: none;
+}
+
+.loading-placeholder {
+    color: #7f8c8d;
+    padding: 15px;
+    text-align: center;
+    font-style: italic;
 }
 
 .recording-item {
