--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,11 @@
                 </div>
             </div>
         </div>
+
+        <div id="prompt-preview-container" class="prompt-preview-container" style="display: none;">
+            <h4>Предпросмотр добавки к промпту</h4>
+            <pre id="prompt-preview-content"></pre>
+        </div>
         
         <div id="settings-save-status" style="text-align: center; margin-bottom: 15px; height: 1em;"></div>
 
