--- a/static/css/style.css
+++ b/static/css/style.css
@@ -592,8 +592,8 @@ input[type="text"], input[type="number"], textarea {
 
 .volume-chart canvas {
     width: 100%;
-    height: 400px;
-    background-color: #ffffff;
+    height: 400px; /* Высота графика */
+    /* background-color убран, так как фон теперь рисуется градиентом в JS */
     border-radius: 4px;
     border: 1px solid #dee2e6;
 }
