--- a/templates/index.html
+++ b/templates/index.html
@@ -16,14 +16,15 @@
     <div class="container">
         <header>
             <h1>ChroniqueX Record Server</h1>
-            <div class="status-container">
-                <div id="status-indicator" class="status-indicator stop"></div>
-                <span id="status-text">Остановлено</span>
-                <span id="status-time">(00:00:00)</span>
+            <div class="status-wrapper">
+                <div class="status-container">
+                    <div id="status-indicator" class="status-indicator stop"></div>
+                    <span id="status-text">Остановлено</span>
+                    <span id="status-time">(00:00:00)</span>
+                </div>
+                <div id="post-process-status" class="post-process-status">&nbsp;</div>
             </div>
         </header>
-
-        <div id="post-process-status" class="post-process-status" style="display: none;"></div>
         <div class="controls">
             <button id="rec-btn" class="control-btn rec-btn">REC</button>
             <button id="pause-btn" class="control-btn pause-btn" disabled>PAUSE</button>
